--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,32 @@
-<%-include("./partials/header", { title: "SynBNB"})-%>
-  <body>
-    <%-include("./partials/navbar")-%>
+<%-include("./partials/head", { title: "SynBNB"})-%>
+  <%-include("./partials/navbar")-%>
+  
+  <main class="bg-slate-500">
+    <h1 class="font-extrabold text-center text-4xl">Hello World</h1>
+    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, modi.</p>
+
+    <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, odio culpa cupiditate, 
+        incidunt vitae provident recusandae corporis beatae, non ad suscipit iusto tempora veritatis quaerat delectus doloremque aspernatur ducimus natus.</p>
+    </div>
+
+    <% for(let h of house) { %>
+      <a href="/houses/<%= h._id %> ">
+        <div>
+          <div>
+            <img src="<%= h.img %> " alt="">
+          </div>
     
-    <main class="bg-slate-500">
-      <h1 class="font-extrabold text-center text-4xl">Hello World</h1>
-      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, modi.</p>
+          <div>
+            <h5><%= h.address %> </h5>
+            <h3><%= h.housename %> </h3>
+    
+            <p><%= h.guest %>  guests</p>
+            <h4>₱ <%= h.price %>/night</h4>
+          </div>
+        </div>
+      </a>
+    <% } %> 
+  </main>
 
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, odio culpa cupiditate, 
-          incidunt vitae provident recusandae corporis beatae, non ad suscipit iusto tempora veritatis quaerat delectus doloremque aspernatur ducimus natus.</p>
-      </div>
-    </main>
-
-  </body>
-</html>
+<%-include("./partials/footer")-%>
