--- a/views/houses/house.ejs
+++ b/views/houses/house.ejs
@@ -21,24 +21,28 @@
         <p><%= house.desc %> </p>
     </div>
 
-    <% for(let r of house.review) { %>
-        <div>
-            <div>
-                <p><%= r.review_author %> </p>
-                <p><%= r.rate %> </p>
-            </div>
-            <p><%= r.review %> </p>
-        </div>
-    <% }%> 
-
-    <!-- Add Comments -->
     <div>
-        <form action="/houses/<%= house._id %>/addreview" method="post">
-            <p>Add Review</p>
-            
-            <input type="text" name="review">
-            <button>Post</button>
-        </form>
+        <h5>Reviews</h5>
+
+        <% for(let r of house.review) { %>
+            <div>
+                <div>
+                    <p><%= r.review_author %> </p>
+                    <p><%= r.rate %> </p>
+                </div>
+                <p><%= r.review %> </p>
+            </div>
+        <% }%> 
+    
+        <!-- Add Comments -->
+        <div>
+            <form action="/houses/<%= house._id %>/addreview" method="post">
+                <p>Add Review</p>
+                
+                <input type="text" name="review">
+                <button>Post</button>
+            </form>
+        </div>
     </div>
 </main>
 
