--- a/views/houses/house.ejs
+++ b/views/houses/house.ejs
@@ -31,6 +31,7 @@
                     <p><%= r.rate %> </p>
                 </div>
                 <p><%= r.review %> </p>
+                <p><%= reviewTime %> </p>
             </div>
         <% }%> 
     
