--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -1,9 +1,10 @@
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script>
@@ -13,7 +14,10 @@
             colors: {
               synbnb: '#FF5A5F',
             }
-          }
+          },
+          fontFamily: {
+            sans: [ "Poppins"],
+          },
         }
       }
     </script>
@@ -25,12 +29,12 @@
         .listing-button {
           padding-block: 4px;
           padding-inline: 13px;
-          background-color: #F6F4F5;
+          background-color: #FF5A5F;
           font-size: 1.12rem;
-          border-radius: 30px;
+          border-radius: 10px;
           box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-          color: #232323;
-          font-weight: 500;
+          color: #FFFFFF;
+          font-weight: 400;
           transition: .1s ease-in-out;
         }
         .listing-button:hover {
@@ -42,7 +46,6 @@
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
     <title>SynBNB</title>
   </head>
-</html>
 <body>
   <%- include("../partials/navbar")-%>
   <main class="mx-auto p-5 px-7 md:px-12 max-w-7xl">
