--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,13 +7,13 @@
             </div>
         </a>
         <div class="flex items-center justify-evenly shadow-md px-4 py-3 rounded-full divide-x">
-           <a class="text-xs tracking-wider font-medium text-gray-700 pr-2" href="/">View Listing</a> 
-           <a class="text-xs tracking-wider font-medium text-gray-700 pl-2" href="/l/new">Add Listing</a>
+           <a class="text-sm tracking-wider font-medium text-gray-700 pr-2" href="/">View Listing</a> 
+           <a class="text-sm tracking-wider font-medium text-gray-700 pl-2" href="/l/new">Add Listing</a>
         </div>
 
         <div>
-            <a class="bg-synbnb py-2 px-4 text-white rounded-full text-xs mr-2" href="/">Register Now</a>
-            <a class="text-xs text-gray-800 font-medium" href="/">Login</a>
+            <a class="bg-synbnb py-2 px-4 text-white rounded-full text-sm mr-2" href="/signup">Register Now</a>
+            <a class="text-sm text-gray-800 font-medium" href="/signin">Login</a>
         </div>
     </div>
 </header>
